ic/vendor/libsignal-protocol-sys/libsignal-protocol-c/src/signal_protocol.h

void signal_type_ref(signal_type_base *instance);
void signal_type_unref(signal_type_base *instance);
/**
 * Allocate a new buffer to store data of the provided length.
 *
 * @param len length of the buffer to allocate
 * @return pointer to the allocated buffer, or 0 on failure
 */
signal_buffer *signal_buffer_alloc(size_t len);
/**
 * Create a new buffer and copy the provided data into it.
 *
 * @param data pointer to the start of the data
 * @param len length of the data
 * @return pointer to the allocated buffer, or 0 on failure
 */
signal_buffer *signal_buffer_create(const uint8_t *data, size_t len);
/**
 * Create a copy of an existing buffer.
 *
 * @param buffer the existing buffer to copy
 * @return pointer to the updated buffer, or 0 on failure
 */
signal_buffer *signal_buffer_copy(const signal_buffer *buffer);
/**
 * Create a copy of an existing buffer.
 *
 * @param buffer the existing buffer to copy
 * @param n the maximum number of bytes to copy
 * @return pointer to the updated buffer, or 0 on failure
 */
signal_buffer *signal_buffer_n_copy(const signal_buffer *buffer, size_t n);
/**
 * Append the provided data to an existing buffer.
 * Note: The underlying buffer is only expanded by an amount sufficient
 * to hold the data being appended. There is no additional reserved space
 * to reduce the need for memory allocations.
 *
 * @param buffer the existing buffer to append to
 * @param data pointer to the start of the data
 * @param len length of the data
 * @return pointer to the updated buffer, or 0 on failure
 */
signal_buffer *signal_buffer_append(signal_buffer *buffer, const uint8_t *data, size_t len);
/**
 * Gets the data pointer for the buffer.
 * This can be used to read and write data stored in the buffer.
 *
 * @param buffer pointer to the buffer instance
 * @return data pointer
 */
uint8_t *signal_buffer_data(signal_buffer *buffer);
/**
 * Gets the data pointer for the buffer.
 * This can be used to read and write data stored in the buffer.
 *
 * @param buffer pointer to the buffer instance
 * @return data pointer
 */
const uint8_t *signal_buffer_const_data(const signal_buffer *buffer);
/**
 * Gets the length of the data stored within the buffer.
 *
 * @param buffer pointer to the buffer instance
 * @return data length
 */
size_t signal_buffer_len(const signal_buffer *buffer);
/**
 * Compare two buffers.
 *
 * @param buffer1 first buffer to compare
 * @param buffer2 second buffer to compare
 * @return 0 if the two buffers are equal, negative or positive otherwise
 */
int signal_buffer_compare(signal_buffer *buffer1, signal_buffer *buffer2);
/**
 * Free the data buffer.
 *
 * @param buffer pointer to the buffer instance to free
 */
void signal_buffer_free(signal_buffer *buffer);
/**
 * Zero and free the data buffer.
 * This function should be used when the buffer contains sensitive
 * data, to make sure the memory is cleared before being freed.
 *
 * @param buffer pointer to the buffer instance to free
 */
void signal_buffer_bzero_free(signal_buffer *buffer);
/**
 * Allocate a new buffer list.
 *
 * @return pointer to the allocated buffer, or 0 on failure
 */
signal_buffer_list *signal_buffer_list_alloc(void);
/**
 * Create a copy of an existing buffer list.
 *
 * @param list the existing buffer list to copy
 * @return pointer to the updated buffer, or 0 on failure
 */
signal_buffer_list *signal_buffer_list_copy(const signal_buffer_list *list);
/**
 * Push the provided buffer onto the end of the list.
 * The list will take ownership of the buffer, and free it when the list is
 * freed.
 *
 * @param list the buffer list
 * @param buffer the buffer to push
 * @return 0 on success, or negative on failure
 */
int signal_buffer_list_push_back(signal_buffer_list *list, signal_buffer *buffer);
/**
 * Gets the size of the buffer list.
 *
 * @param list the buffer list
 * @return the size of the list
 */
unsigned int signal_buffer_list_size(signal_buffer_list *list);
/**
 * Gets the value of the element at a particular index in the list
 *
 * @param list the list
 * @param index the index within the list
 * @return the value
 */
signal_buffer *signal_buffer_list_at(signal_buffer_list *list, unsigned int index);
/**
 * Free the buffer list, including all the buffers added to it.
 *
 * @param list the buffer list
 */
void signal_buffer_list_free(signal_buffer_list *list);
/**
 * Free the buffer list, including all the buffers added to it.
 * This function should be used when the buffer list contains sensitive
 * data, to make sure the memory is cleared before being freed.
 *
 * @param list the buffer list
 */
void signal_buffer_list_bzero_free(signal_buffer_list *list);
/**
 * Allocate a new int list
 *
 * @return pointer to the allocated buffer, or 0 on failure
 */
signal_int_list *signal_int_list_alloc(void);
/**
 * Push a new value onto the end of the list
 *
 * @param list the list
 * @param value the value to push
 * @return 0 on success, or negative on failure
 */
int signal_int_list_push_back(signal_int_list *list, int value);
/**
 * Gets the size of the list.
 *
 * @param list the list
 * @return the size of the list
 */
unsigned int signal_int_list_size(signal_int_list *list);
/**
 * Gets the value of the element at a particular index in the list
 *
 * @param list the list
 * @param index the index within the list
 * @return the value
 */
int signal_int_list_at(signal_int_list *list, unsigned int index);
/**
 * Free the int list
 * @param list the list to free
 */
void signal_int_list_free(signal_int_list *list);