ic/vendor/libsignal-protocol-sys/bindings.rs

extern "C" {
    pub fn sender_key_record_set_user_record(
        record: *mut sender_key_record,
        user_record: *mut signal_buffer,
    );
}
extern "C" {
    pub fn sender_key_record_destroy(type_: *mut signal_type_base);
}
extern "C" {
    pub fn signal_type_ref(instance: *mut signal_type_base);
}
extern "C" {
    pub fn signal_type_unref(instance: *mut signal_type_base);
}
extern "C" {
    /// Allocate a new buffer to store data of the provided length.
    ///
    /// @param len length of the buffer to allocate
    /// @return pointer to the allocated buffer, or 0 on failure
    pub fn signal_buffer_alloc(len: usize) -> *mut signal_buffer;
}
extern "C" {
    /// Create a new buffer and copy the provided data into it.
    ///
    /// @param data pointer to the start of the data
    /// @param len length of the data
    /// @return pointer to the allocated buffer, or 0 on failure
    pub fn signal_buffer_create(
        data: *const u8,
        len: usize,
    ) -> *mut signal_buffer;
}
extern "C" {
    /// Create a copy of an existing buffer.
    ///
    /// @param buffer the existing buffer to copy
    /// @return pointer to the updated buffer, or 0 on failure
    pub fn signal_buffer_copy(
        buffer: *const signal_buffer,
    ) -> *mut signal_buffer;
}
extern "C" {
    /// Create a copy of an existing buffer.
    ///
    /// @param buffer the existing buffer to copy
    /// @param n the maximum number of bytes to copy
    /// @return pointer to the updated buffer, or 0 on failure
    pub fn signal_buffer_n_copy(
        buffer: *const signal_buffer,
        n: usize,
    ) -> *mut signal_buffer;
}
extern "C" {
    /// Append the provided data to an existing buffer.
    /// Note: The underlying buffer is only expanded by an amount sufficient
    /// to hold the data being appended. There is no additional reserved space
    /// to reduce the need for memory allocations.
    ///
    /// @param buffer the existing buffer to append to
    /// @param data pointer to the start of the data
    /// @param len length of the data
    /// @return pointer to the updated buffer, or 0 on failure
    pub fn signal_buffer_append(
        buffer: *mut signal_buffer,
        data: *const u8,
        len: usize,
    ) -> *mut signal_buffer;
}
extern "C" {
    /// Gets the data pointer for the buffer.
    /// This can be used to read and write data stored in the buffer.
    ///
    /// @param buffer pointer to the buffer instance
    /// @return data pointer
    pub fn signal_buffer_data(buffer: *mut signal_buffer) -> *mut u8;
}
extern "C" {
    /// Gets the data pointer for the buffer.
    /// This can be used to read and write data stored in the buffer.
    ///
    /// @param buffer pointer to the buffer instance
    /// @return data pointer
    pub fn signal_buffer_const_data(buffer: *const signal_buffer) -> *const u8;
}
extern "C" {
    /// Gets the length of the data stored within the buffer.
    ///
    /// @param buffer pointer to the buffer instance
    /// @return data length
    pub fn signal_buffer_len(buffer: *const signal_buffer) -> usize;
}
extern "C" {
    /// Compare two buffers.
    ///
    /// @param buffer1 first buffer to compare
    /// @param buffer2 second buffer to compare
    /// @return 0 if the two buffers are equal, negative or positive otherwise
    pub fn signal_buffer_compare(
        buffer1: *mut signal_buffer,
        buffer2: *mut signal_buffer,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Free the data buffer.
    ///
    /// @param buffer pointer to the buffer instance to free
    pub fn signal_buffer_free(buffer: *mut signal_buffer);
}
extern "C" {
    /// Zero and free the data buffer.
    /// This function should be used when the buffer contains sensitive
    /// data, to make sure the memory is cleared before being freed.
    ///
    /// @param buffer pointer to the buffer instance to free
    pub fn signal_buffer_bzero_free(buffer: *mut signal_buffer);
}
extern "C" {
    /// Allocate a new buffer list.
    ///
    /// @return pointer to the allocated buffer, or 0 on failure
    pub fn signal_buffer_list_alloc() -> *mut signal_buffer_list;
}
extern "C" {
    /// Create a copy of an existing buffer list.
    ///
    /// @param list the existing buffer list to copy
    /// @return pointer to the updated buffer, or 0 on failure
    pub fn signal_buffer_list_copy(
        list: *const signal_buffer_list,
    ) -> *mut signal_buffer_list;
}
extern "C" {
    /// Push the provided buffer onto the end of the list.
    /// The list will take ownership of the buffer, and free it when the list is
    /// freed.
    ///
    /// @param list the buffer list
    /// @param buffer the buffer to push
    /// @return 0 on success, or negative on failure
    pub fn signal_buffer_list_push_back(
        list: *mut signal_buffer_list,
        buffer: *mut signal_buffer,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Gets the size of the buffer list.
    ///
    /// @param list the buffer list
    /// @return the size of the list
    pub fn signal_buffer_list_size(
        list: *mut signal_buffer_list,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    /// Gets the value of the element at a particular index in the list
    ///
    /// @param list the list
    /// @param index the index within the list
    /// @return the value
    pub fn signal_buffer_list_at(
        list: *mut signal_buffer_list,
        index: ::std::os::raw::c_uint,
    ) -> *mut signal_buffer;
}
extern "C" {
    /// Free the buffer list, including all the buffers added to it.
    ///
    /// @param list the buffer list
    pub fn signal_buffer_list_free(list: *mut signal_buffer_list);
}
extern "C" {
    /// Free the buffer list, including all the buffers added to it.
    /// This function should be used when the buffer list contains sensitive
    /// data, to make sure the memory is cleared before being freed.
    ///
    /// @param list the buffer list
    pub fn signal_buffer_list_bzero_free(list: *mut signal_buffer_list);
}
extern "C" {
    /// Allocate a new int list
    ///
    /// @return pointer to the allocated buffer, or 0 on failure
    pub fn signal_int_list_alloc() -> *mut signal_int_list;
}
extern "C" {
    /// Push a new value onto the end of the list
    ///
    /// @param list the list
    /// @param value the value to push
    /// @return 0 on success, or negative on failure
    pub fn signal_int_list_push_back(
        list: *mut signal_int_list,
        value: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Gets the size of the list.
    ///
    /// @param list the list
    /// @return the size of the list
    pub fn signal_int_list_size(
        list: *mut signal_int_list,
    ) -> ::std::os::raw::c_uint;
}
extern "C" {
    /// Gets the value of the element at a particular index in the list
    ///
    /// @param list the list
    /// @param index the index within the list
    /// @return the value
    pub fn signal_int_list_at(
        list: *mut signal_int_list,
        index: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    /// Free the int list
    /// @param list the list to free
    pub fn signal_int_list_free(list: *mut signal_int_list);
}
